syntax = "proto3";

package name;

option go_package = "./;proto";

service Name {
  rpc CreateFile(CreateFileRequest) returns (CreateFileResponse);
  rpc CreateDir(CreateDirRequest) returns (CreateDirResponse);
  rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse);
  rpc DeleteDir(DeleteDirRequest) returns (DeleteDirResponse);
  rpc List(ListRequest) returns (ListResponse);
  rpc Stat(StatRequest) returns (StatResponse);
}

message Permission {
  bool read = 1;
  bool write = 2;
  bool delete = 3;
}

message Permissions {
  string owner = 1;
  string group = 2;
  Permission ownerPermission = 3;
  Permission groupPermission = 4;
  Permission otherPermission = 5;
}


message DirEntry {
  string path = 1;
  bool isDir = 2;
  Permissions permissions = 3;
  int64 createdAt = 4;
  int64 modifiedAt = 5;
  int64 accessedAt = 6;
}

message StatBlockInfo {
  string host = 1;
  uint32 port = 2;
  string blockId = 3;
  uint32 crc = 5;
  uint64 sequence = 6;
  uint32 length = 7;
}

message CreateFileRequest {
  string path = 1;
  Permissions permissions = 2;
}

message CreateFileResponse {
}

message CreateDirRequest {
  string path = 1;
  Permissions permissions = 2;
}

message CreateDirResponse {
}

message DeleteFileRequest {
  string path = 1;
}

message DeleteFileResponse {
}


message DeleteDirRequest {
  string path = 1;
}

message DeleteDirResponse {
}

message ListRequest {
  string path = 1;
}

message ListResponse {
  string path = 1;
  repeated DirEntry entries = 2;
}

message StatRequest {
  string path = 1;
}

message StatResponse {
  string path = 1;
  DirEntry entry = 2;
  repeated StatBlockInfo blockInfos = 3;
}
